# cellvit-distill

./: .gitignore  EXPERIMENT_LOG.md  README.md  RESULTS.md  pyproject.toml  requirements.txt  run_experiments.sh
cellvit_distill/configs/: default.yaml  fastvit_feature_distill.yaml  fastvit_nulite.yaml  fastvit_nulite_v2.yaml  nulite_t_ours.yaml
cellvit_distill/data/: monuseg.py  pannuke.py
cellvit_distill/models/: mamba_decoder.py  nulite_student.py  student.py
cellvit_distill/scripts/: aggregate_3fold.py  download_monuseg.py  download_pannuke.py  eval_cellvit256.py  eval_monuseg.py  eval_nulite.py  eval_student.py  eval_teacher_cached.py  precompute_features.py  precompute_soft_targets.py  run_ablation_grid.py  stat_test.py  train.py
cellvit_distill/utils/: losses.py  metrics.py  postprocess.py
docs/: related-work.md
grids/: main_ablation.yaml
logs/3fold_cv/: runs.manifest  summary.md
logs/hybrid_b/: eval_fold1.json  eval_fold1_tta.json
logs/nulite_eval/: nulite_t_fold1_tta.json  nulite_t_fold2_tta.json  nulite_t_fold3_tta.json
notebooks/: 01_dataset_analysis.ipynb
remote/: run_3fold_cv.sh  setup.sh  sync_back.sh
scripts/: c3_mamba_sweep.sh  d2_aggregate.py  d2_critical.sh  d2_critical_resume.sh  e_monuseg_d2_followup.sh  e_monuseg_sweep.sh  format_thesis_docx.py  make_diagrams_graphviz.py  make_explanatory_figures.py  make_thesis_figures.py  update_thesis_docx.py
slides/: create.js  create_60.js
tests/: test_dkd.py  test_fdkd.py
