[project]
name = "cellvit-distill"
version = "0.1.0"
description = "Knowledge distillation from CellViT-SAM-H for cell segmentation"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "timm>=0.9.12",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-image>=0.21.0",
    "albumentations>=1.3.1",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "matplotlib>=3.7.0",
    "gdown>=5.2.1",
    "scikit-learn>=1.8.0",
    "pandas>=3.0.2",
    "numba>=0.65.0",
    "einops>=0.8.2",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.0",
]

[project.optional-dependencies]
wandb = ["wandb>=0.15.0"]

[tool.uv]
dev-dependencies = ["pytest>=7.0"]
